--- a/WEB/casas/index.html
+++ b/WEB/casas/index.html
@@ -6,8 +6,36 @@
     <title>Unity WebGL Player | CasasGame</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
   <body>
+
+    <div class="container-fluid p-3 header">
+      <div class="row">
+        <div class="col">
+          <a href="/">
+            <img id="logo" alt="logo" src="TemplateData/logo.png">
+          </a>
+        </div>
+        <div class="col d-flex justify-content-end">
+          <div class="row">
+            <div class=col>
+              <a href="/profile">
+                <img class="icon" alt="logo" src="TemplateData/perfil.png">
+              </a>
+            </div>
+            <div class="col">
+              <a href="/logout">
+                <img class="icon" alt="icon" src="TemplateData/logout.png">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <br>
+
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
@@ -108,5 +136,10 @@
       };
       document.body.appendChild(script);
     </script>
+
+  <div class="footer fixed-bottom d-flex align-items-center justify-content-center">
+    <span>©2022 CEMEX S.A.B de C.V</span>
+  </div>
+
   </body>
 </html>
