Update of resources and game.ejs

--- a/WEB/casas/index.html
+++ b/WEB/casas/index.html
@@ -13,7 +13,7 @@
     <div class="container-fluid p-3 header">
       <div class="row">
         <div class="col">
-          <a href="/">
+          <a href="/game">
             <img id="logo" alt="logo" src="TemplateData/logo.png">
           </a>
         </div>
@@ -22,6 +22,16 @@
             <div class=col>
               <a href="/profile">
                 <img class="icon" alt="logo" src="TemplateData/perfil.png">
+              </a>
+            </div>
+            <div class="col">
+              <a href="/stats">
+                <img class="icon" alt="icon" src="TemplateData/statistics.png">
+              </a>
+            </div>
+            <div class="col">
+              <a href="/game">
+                <img class="icon" alt="icon" src="TemplateData/game.png">
               </a>
             </div>
             <div class="col">
